--- a/index.html
+++ b/index.html
@@ -17,17 +17,15 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>Grew up in Kissimmee Fl, having worked in retail for 9 years, then for the Catholic Church for 6, I am now looking to work in technology.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Kissimmee, FL</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
-      <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Enjoy time with family, helping others, reading, and listening to podcasts, </p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p> Kissimmee, FL</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>Enjoy working with computers and have been told that I am good with them so this would be a good career for me.</p>
     </section>
 
     <footer id="footer">
